Add working Dockerfile

--- a/ClientApp/src/app/items-cards/item-card/item-card.component.html
+++ b/ClientApp/src/app/items-cards/item-card/item-card.component.html
@@ -7,4 +7,5 @@
         <p class="card-text">{{beer.price | currency:'USD'}}</p>
         <app-add-item-to-cart [item]="beer"></app-add-item-to-cart>
     </div>
+    <app-add-item-to-favorite [beer]="beer"></app-add-item-to-favorite>
 </div>
