--- a/ClientApp/src/app/navbar/navbar.component.html
+++ b/ClientApp/src/app/navbar/navbar.component.html
@@ -12,8 +12,8 @@
           <li class="nav-item active">
             <a class="nav-link" routerLinkActive="active" routerLink="send-email">Send email</a>
           </li>
-          <li class="nav-link" >
-            <a routerLinkActive="active" routerLink="shopping-cart">shopping-cart</a>
+          <li class="nav-link active" >
+            <a class="nav-link" routerLinkActive="active" routerLink="shopping-cart">shopping-cart</a>
           </li>
         </ul>
         <div class="user-admission-container">
