--- a/ClientApp/src/app/navbar/navbar.component.html
+++ b/ClientApp/src/app/navbar/navbar.component.html
@@ -7,7 +7,7 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0 align-items-center">
           <li class="nav-item active">
-            <a class="nav-link" routerLinkActive="active" routerLink="favorite-items">Favorite items</a>
+            <a class="nav-link" routerLinkActive="active" routerLink="favourite-items">favourite items</a>
           </li>
           <li class="nav-item ">
             <a class="nav-link" routerLinkActive="active" routerLink="send-email">Send email</a>
