--- a/ClientApp/src/app/shopping-cart/shopping-cart.component.html
+++ b/ClientApp/src/app/shopping-cart/shopping-cart.component.html
@@ -1,7 +1,7 @@
 <main class="wrapper">
   <ng-container *ngFor="let item of items; let i = index">
     <ng-template  [ngIf]="i < 6">
-        <app-item-card class="card-container" *ngIf="i < 6" [item]="item"></app-item-card>
+        <app-item-card class="card-container" id="app-item-{{item.id}}" *ngIf="i < 6" [item]="item"></app-item-card>
     </ng-template>
   </ng-container>
   <section>
