Fix navbar on mobile

--- a/ClientApp/src/styles.scss
+++ b/ClientApp/src/styles.scss
@@ -22,3 +22,6 @@ body {
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
 @import '../node_modules/bootstrap-icons/font/bootstrap-icons';
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
