--- a/ClientApp/src/app/navbar/navbar.component.html
+++ b/ClientApp/src/app/navbar/navbar.component.html
@@ -1,31 +1,35 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="wrapper align-items-center">
+<div class="container-fluid navbar-light bg-faded">
+    <nav class="navbar navbar-expand-md wrapper">
       <a class="navbar-brand" routerLinkActive="active" routerLink="">Main Page</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+      <button class="navbar-toggler navbar-toggler-right" type="button" (click)="isNavbarCollapsed = !isNavbarCollapsed" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0 align-items-center">
+      <div [ngbCollapse]="isNavbarCollapsed" class="navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
             <a class="nav-link" routerLinkActive="active" routerLink="favourite-items">favourite items</a>
           </li>
           <li class="nav-item ">
             <a class="nav-link" routerLinkActive="active" routerLink="send-email">Send email</a>
           </li>
+          <li>
+            <a class="text-secondary sign-in nav-link" routerLink="signin">
+              Sign In
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="text-secondary nav-link" routerLink="login">
+              Login
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active nav-cart-link ">
+              <i class="nav-link bi text-secondary bi-basket align-self-end" routerLinkActive="active" routerLink="shopping-cart">
+                <span >Cart</span>
+              </i>
+            </a>
+          </li>
         </ul>
-        <div class=" user-admission-container d-flex flex-row align-items-center">
-          <a class="text-secondary sign-in nav-link" routerLink="signin">
-            Sign In
-          </a>
-          <a class="text-secondary nav-link" routerLink="login">
-            Login
-          </a>
-          <a class="nav-link active ">
-            <i class="nav-link bi text-secondary bi-basket align-self-end" routerLinkActive="active" routerLink="shopping-cart">
-              <span >Cart</span>
-            </i>
-          </a>
-        </div>
       </div>
-    </div>
-</nav>
+    </nav>
+  </div>
