--- a/ClientApp/src/app/navbar/navbar.component.scss
+++ b/ClientApp/src/app/navbar/navbar.component.scss
@@ -1,9 +1,3 @@
-.wrapper{
-    display:flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
 #navbarTogglerDemo02{
     justify-content: space-between;
 }
@@ -21,7 +15,6 @@
 nav{
     display: flex;
     justify-content: center;
-    background-color: #e9ecef !important;
 }
 
 .sign-in{
@@ -30,4 +23,19 @@ nav{
 
 .bi-basket::before{
     padding-right: 8px;
+}
+
+.nav-cart-link{
+    margin-left: 20px;
+}
+
+li{
+    display: flex;
+    align-items: center;
+}
+
+.container-fluid{
+    padding: 0px;
+    width: 100%;
+    background-color: #e9ecef;
 }
