Add responsive navbar

--- a/ClientApp/src/app/navbar/navbar.component.scss
+++ b/ClientApp/src/app/navbar/navbar.component.scss
@@ -2,40 +2,53 @@
     justify-content: space-between;
 }
 
-
-.form-inline{
-    flex-direction: row;
-    display: flex;
-
-    input{
-        margin-right: 15px;
-    }
-}
-
 nav{
     display: flex;
     justify-content: center;
 }
 
-.sign-in{
-    margin-right: 20px;
+.navbar-toggler-right{
+    margin-left: auto;
+}
+
+i{
+    padding: 0px;
 }
 
 .bi-basket::before{
     padding-right: 8px;
 }
 
-.nav-cart-link{
-    margin-left: 20px;
+
+ul{
+    width: 100%;
 }
 
+
+
 li{
-    display: flex;
-    align-items: center;
+    margin-right: auto;
 }
 
 .container-fluid{
     padding: 0px;
     width: 100%;
     background-color: #e9ecef;
+}
+@media (min-width: 768px) { 
+
+    li{
+        display: flex;
+        align-items: center;
+        margin-right: 0;
+    }
+
+    .sign-in{
+        margin-left: auto;
+        margin-right: 20px;
+    }
+
+    .nav-cart-link{
+        margin-left: 20px;
+    }
 }
