--- a/ClientApp/src/app/navbar/navbar.component.html
+++ b/ClientApp/src/app/navbar/navbar.component.html
@@ -1,19 +1,19 @@
-<div class="container-fluid navbar-light bg-faded">
-    <nav class="navbar navbar-expand-md wrapper">
+<div class="container-fluid navbar-light bg-faded"> 
+  <nav class="navbar navbar-expand-md wrapper">
       <a class="navbar-brand" routerLinkActive="active" routerLink="">Main Page</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" (click)="isNavbarCollapsed = !isNavbarCollapsed" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
       <div [ngbCollapse]="isNavbarCollapsed" class="navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" routerLinkActive="active" routerLink="favourite-items">favourite items</a>
-          </li>
           <li class="nav-item ">
             <a class="nav-link" routerLinkActive="active" routerLink="send-email">Send email</a>
           </li>
-          <li>
-            <a class="text-secondary sign-in nav-link" routerLink="signin">
+          <li class="nav-item active">
+            <a class="nav-link" routerLinkActive="active" routerLink="favourite-items">Favourite items</a>
+          </li>
+          <li class="sign-in">
+            <a class="text-secondary  nav-link" routerLink="signin">
               Sign In
             </a>
           </li>
