Fix pagination bug with property binding

--- a/ClientApp/src/app/items-cards/items-cards.component.html
+++ b/ClientApp/src/app/items-cards/items-cards.component.html
@@ -4,7 +4,7 @@
         <app-item-card [item]="item"></app-item-card>
     </div>
   </section>
-  <ng-template [ngIf]="true">
+  <ng-template [ngIf]="showPagination">
     <app-pagination></app-pagination>
   </ng-template>
 </main>
