Add TS to pagination Component

--- a/ClientApp/src/app/items-cards/items-cards.component.html
+++ b/ClientApp/src/app/items-cards/items-cards.component.html
@@ -5,6 +5,6 @@
     </div>
   </section>
   <ng-template [ngIf]="showPagination">
-    <app-pagination></app-pagination>
+    <app-pagination (changePaginationEvent)="changePage()"></app-pagination>
   </ng-template>
 </main>
