Add pagination to Favourite Items and fix bug with number of pages that the Pagination Component show

--- a/ClientApp/src/app/items-cards/items-cards.component.html
+++ b/ClientApp/src/app/items-cards/items-cards.component.html
@@ -5,6 +5,6 @@
     </div>
   </section>
   <ng-template [ngIf]="showPagination">
-    <app-pagination (changePaginationEvent)="changePage()"></app-pagination>
+    <app-pagination [stock]="stock" (changePaginationEvent)="changePage()"></app-pagination>
   </ng-template>
 </main>
